--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -80,10 +80,20 @@
               <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef>Status</th>
                 <td mat-cell *matCellDef="let row">
-                  <ion-text color="success" *ngIf="row.submitted">
-                    Submitted
+                  <ion-text
+                    [ngStyle]="{
+                    color: 'green'
+                  }"
+                    *ngIf="row.submitted"
+                  >
+                    To Deliver
                   </ion-text>
-                  <ion-text *ngIf="!row.submitted" color="danger">
+                  <ion-text
+                    *ngIf="!row.submitted"
+                    [ngStyle]="{
+                    color: 'red'
+                  }"
+                  >
                     Draft
                   </ion-text>
                 </td>
