--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -1,8 +1,13 @@
 <ion-card>
   <ion-card-content>
-    <ion-fab *ngIf="!salesInvoiceDetails?.submitted"vertical="top" horizontal="end" slot="fixed">
+    <ion-fab
+      *ngIf="!salesInvoiceDetails?.submitted"
+      vertical="top"
+      horizontal="end"
+      slot="fixed"
+    >
       <ion-fab-button (click)="submitSalesInvoice()">
-        SUBMIT
+        <ion-icon name="lock"></ion-icon>
       </ion-fab-button>
     </ion-fab>
     <ion-grid class="ion-no-padding">
@@ -117,7 +122,7 @@
               readonly="true"
               type="text"
               value="{{
-                salesInvoiceDetails?.submitted ? 'Submitted' : 'Draft'
+                salesInvoiceDetails?.submitted ? 'To Deliver' : 'Draft'
               }}"
               placeholder="Contact"
               [ngStyle]="{
