--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.scss
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.scss
@@ -33,3 +33,10 @@ tr.mat-footer-row {
 .mat-table-sticky {
   border-top: 1px solid #e0e0e0;
 }
+.example-full-width {
+  width: 100%;
+}
+
+.transform {
+  transform: translateY(10px);
+}
