--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -37,7 +37,7 @@
               <ion-icon slot="start" name="repeat"></ion-icon>
               <ion-label>Warranty</ion-label>
             </ion-item>
-            <ion-item *ngIf="loggedIn" routerLink="/settings" lines="none">
+            <ion-item *ngIf="loggedIn && showSettings" routerLink="/settings" lines="none">
               <ion-icon slot="start" name="settings"></ion-icon>
               <ion-label>Settings</ion-label>
             </ion-item>
