feat(rma-frontend): Tabs working with mat-table

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -198,6 +198,8 @@
                   <mat-cell
                     *matCellDef="let row"
                     [satPopoverAnchor]="p"
+                    tabindex="0"
+                    (keyup.enter)="p.open()"
                     (click)="p.open()"
                   >
                     <ng-container *ngIf="row.item_name">
