--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -89,10 +89,11 @@
                     <mat-autocomplete
                       autoActiveFirstOption
                       #auto="matAutocomplete"
+                      [displayWith]="getOptionText"
                     >
                       <mat-option
                         *ngFor="let option of filteredCustomerList | async"
-                        [value]="option.customer_name"
+                        [value]="option"
                       >
                         {{ option.customer_name }}
                       </mat-option>
@@ -227,6 +228,8 @@
                   <mat-cell
                     *matCellDef="let row"
                     [satPopoverAnchor]="p"
+                    tabindex="0"
+                    (keyup.enter)="p.open()"
                     (click)="p.open()"
                   >
                     <ng-container>
@@ -252,6 +255,8 @@
                   <mat-cell
                     *matCellDef="let row"
                     [satPopoverAnchor]="p"
+                    tabindex="0"
+                    (keyup.enter)="p.open()"
                     (click)="p.open()"
                   >
                     <ng-container>
