--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -222,6 +222,7 @@
                       ></inline-edit>
                     </sat-popover>
                   </mat-cell>
+                  <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
                 </ng-container>
                 <ng-container matColumnDef="quantity">
                   <mat-header-cell *matHeaderCellDef>Quantity</mat-header-cell>
@@ -249,6 +250,7 @@
                       ></inline-edit>
                     </sat-popover>
                   </mat-cell>
+                  <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
                 </ng-container>
                 <ng-container matColumnDef="rate">
                   <mat-header-cell *matHeaderCellDef>Rate</mat-header-cell>
@@ -275,12 +277,14 @@
                       ></inline-edit>
                     </sat-popover>
                   </mat-cell>
+                  <mat-footer-cell *matFooterCellDef>Total </mat-footer-cell>
                 </ng-container>
                 <ng-container matColumnDef="total">
                   <mat-header-cell *matHeaderCellDef>Total</mat-header-cell>
                   <mat-cell *matCellDef="let row"
                     >{{row.rate * row.qty}}</mat-cell
                   >
+                  <mat-footer-cell *matFooterCellDef>{{total}}</mat-footer-cell>
                 </ng-container>
                 <mat-header-row
                   *matHeaderRowDef="displayedColumns; sticky: true"
@@ -288,6 +292,10 @@
                 <mat-row
                   *matRowDef="let row; columns: displayedColumns;"
                 ></mat-row>
+                <mat-footer-row
+                  class="footer"
+                  *matFooterRowDef="displayedColumns; sticky: true"
+                ></mat-footer-row>
               </mat-table>
             </ion-item>
           </ion-card-content>
