--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -286,6 +286,19 @@
                   >
                   <mat-footer-cell *matFooterCellDef>{{total}}</mat-footer-cell>
                 </ng-container>
+                <ng-container matColumnDef="delete">
+                  <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                  <mat-cell *matCellDef="let row ; let i = index">
+                    <ion-button
+                      (click)="deleteRow(i)"
+                      fill="clear"
+                      class="ion-no-padding"
+                    >
+                      <ion-icon slot="icon-only" name="trash"></ion-icon>
+                    </ion-button>
+                  </mat-cell>
+                  <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+                </ng-container>
                 <mat-header-row
                   *matHeaderRowDef="displayedColumns; sticky: true"
                 ></mat-header-row>
