--- a/packages/rma-frontend/src/app/settings/settings.page.html
+++ b/packages/rma-frontend/src/app/settings/settings.page.html
@@ -29,9 +29,9 @@
                   required
                   placeholder="Default Company"
                   aria-label="Default Company"
-                  [matAutocomplete]="auto"
+                  [matAutocomplete]="autoCompany"
                   formControlName="defaultCompany">
-                <mat-autocomplete #auto="matAutocomplete">
+                <mat-autocomplete #autoCompany="matAutocomplete">
                   <mat-option *ngFor="let company of companies | async" [value]="company.name">
                     <span>{{company.name}}</span>
                   </mat-option>
@@ -43,9 +43,9 @@
                   required
                   placeholder="Selling Price List"
                   aria-label="Selling Price List"
-                  [matAutocomplete]="auto"
+                  [matAutocomplete]="autoSellingPriceList"
                   formControlName="sellingPriceList">
-                <mat-autocomplete #auto="matAutocomplete">
+                <mat-autocomplete #autoSellingPriceList="matAutocomplete">
                   <mat-option *ngFor="let priceList of sellingPriceLists | async" [value]="priceList.name">
                     <span>{{priceList.name}}</span>
                   </mat-option>
@@ -112,6 +112,13 @@
             <ion-card-title>
               Territory for Warehouse
             </ion-card-title>
+            <ion-fab
+              vertical="top"
+              horizontal="end">
+              <ion-fab-button color="light" (click)="mapTerritory()">
+                <ion-icon name="swap"></ion-icon>
+              </ion-fab-button>
+            </ion-fab>
           </ion-card-header>
           <ion-card-content>
             <div class="ion-padding">
@@ -127,7 +134,7 @@
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header (click)="setFilter()">Name</th>
                 <td mat-cell *matCellDef="let row">
-                  <a [routerLink]="['/' + 'territory', row.uuid]">{{row.name}}</a>
+                  <a (click)="mapTerritory(row.uuid, row.name, row.warehouse)">{{row.name}}</a>
                 </td>
               </ng-container>
 
