feat(rma-frontend): Added key-directive to emmit ctrl+I event
ctrl+I events adds a new row in sales-invoice

--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -185,7 +185,7 @@
                 </ion-card-title>
               </ion-col>
               <ion-col class="ion-text-right" size="auto">
-                <ion-button color="tertiary" fill="outline" (click)="addItem()">
+                <ion-button color="tertiary" fill="outline" (ctrlI)="addItem()" (click)="addItem()">
                   Add
                 </ion-button>
               </ion-col>
