--- a/packages/rma-frontend/src/app/settings/settings.page.html
+++ b/packages/rma-frontend/src/app/settings/settings.page.html
@@ -134,7 +134,7 @@
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header (click)="setFilter()">Name</th>
                 <td mat-cell *matCellDef="let row">
-                  <a (click)="mapTerritory(row.uuid, row.name, row.warehouse)">{{row.name}}</a>
+                  {{row.name}}
                 </td>
               </ng-container>
 
@@ -145,7 +145,10 @@
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              <tr
+                mat-row
+                (click)="mapTerritory(row.uuid, row.name, row.warehouse)"
+                *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
             <mat-paginator #paginator
               class="mat-paginator-sticky"
