--- a/packages/rma-frontend/src/global.scss
+++ b/packages/rma-frontend/src/global.scss
@@ -52,3 +52,12 @@
 .mat-input-wrapper {
   width: 100% !important;
 }
+
+.mat-row:hover {
+	transform: scale(1);
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
