--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/edit-table/edit-table.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/edit-table/edit-table.component.html
@@ -1,26 +1,10 @@
 <form (ngSubmit)="onSubmit()">
   <div class="mat-subheading-2" class="ion-text-capitalize">Select Serial</div>
+
   <mat-form-field>
-    <input
-      type="text"
-      placeholder="Select Serial"
-      matInput
-      [formControl]="itemFormControl"
-      [matAutocomplete]="auto"
-    />
-    <mat-autocomplete
-      autoActiveFirstOption
-      #auto="matAutocomplete"
-      [displayWith]="getOptionText"
-    >
-      <mat-option
-        *ngFor="let option of filteredItemList | async"
-        [value]="option"
-      >
-        {{ option.serial_no }}
-      </mat-option>
-    </mat-autocomplete>
+    <input matInput type="text" name="Serial No" [(ngModel)]="serial_no" />
   </mat-form-field>
+
   <div class="actions">
     <button mat-button type="button" color="primary" (click)="onCancel()">
       CANCEL
