--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -133,7 +133,7 @@
               readonly="true"
               type="text"
               value="{{ salesInvoiceDetails?.status }}"
-              placeholder="Contact"
+              placeholder="Status"
               [ngStyle]="{
                 color: salesInvoiceDetails?.submitted === true ? 'green' : 'red'
               }"
@@ -224,7 +224,7 @@
         <mat-header-cell *matHeaderCellDef>Rate</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <ng-container>
-            {{ row.rate }}
+            {{ row.rate | curFormat | async }}
           </ng-container>
           <!-- <sat-popover
               #p
@@ -239,7 +239,7 @@
       </ng-container>
       <ng-container matColumnDef="amount">
         <mat-header-cell *matHeaderCellDef>Total</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{ row.rate * row.qty }}</mat-cell>
+        <mat-cell *matCellDef="let row">{{ row.rate * row.qty | curFormat | async }}</mat-cell>
       </ng-container>
       <mat-header-row
         *matHeaderRowDef="displayedColumns; sticky: true"
