--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -120,7 +120,7 @@
               <tr
                 mat-row
                 *matRowDef="let row; columns: displayedColumns;"
-                (click)="navigateBasedOnRoles(row.uuid)"
+                (click)="navigateBasedOnRoles(row)"
               ></tr>
             </table>
 
