--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -16,6 +16,12 @@
         <ion-button color="danger" (click)="rejectSalesInvoice()">
           Reject
         </ion-button>
+        <ion-button
+          color="warning"
+          [routerLink]="['/add-sales-invoice', 'edit', invoiceUuid]"
+        >
+          Edit
+        </ion-button>
         <ion-button (click)="submitSalesInvoice()">
           Submit
         </ion-button>
@@ -239,7 +245,9 @@
       </ng-container>
       <ng-container matColumnDef="amount">
         <mat-header-cell *matHeaderCellDef>Total</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{ row.rate * row.qty | curFormat | async }}</mat-cell>
+        <mat-cell *matCellDef="let row">{{
+          row.rate * row.qty | curFormat | async
+        }}</mat-cell>
       </ng-container>
       <mat-header-row
         *matHeaderRowDef="displayedColumns; sticky: true"
