--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -109,7 +109,7 @@
                   Total
                 </th>
                 <td mat-cell *matCellDef="let row">
-                  ₹ {{row.total}}
+                  {{row.total | curFormat | async }}
                 </td>
               </ng-container>
 
