--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
@@ -48,6 +48,7 @@
       *ngSwitchCase="2"
     ></sales-invoice-accounts>
     <sales-invoice-return
+      [sales_invoice]="sales_invoice_name"
       class="width"
       *ngSwitchCase="3"
     ></sales-invoice-return>
